--- a/views/game_result.pug
+++ b/views/game_result.pug
@@ -15,83 +15,72 @@ block content
         Type: #{game.game_type.name} <br>
         Started: #{moment(game.created_at).format('YYYY-MM-DD HH:mm:ss')} <br>
         Finished: #{game.end_time === null ? '' : moment(game.end_time).format('YYYY-MM-DD HH:mm:ss')} <br>
+        Stakes: #{game.owe_type_id === null ? "None" : game.owe_type.item} <br>
         Duration: #{game.end_time === null ? '' : moment.duration(moment(game.end_time).diff(game.created_at)).asMinutes().toFixed() + ' minutes'} <br>
-    each player in players
-        if (game.winner_id === player.id) 
-            p= 'Winner: ' + player.name
+    each playerId in game.players
+        if (game.winner_id === playerId)
+            p= 'Winner: ' + players[playerId].name
 
-    div(class='table-responsive')
-        table(class='table table-striped table-bordered')
-            thead
-                tr
-                    th Legs
-                    each player in players
-                        th= player.name
-                    th Results
-            tbody
-            - var idx = 1;
-            each match in matches
-                tr
-                    th(hidden='true' scope='row')= match.id
-                    td= 'Leg #' + idx++
-                    each player in players
-                        td(align='center')
-                            if match.winner_id === player.id
-                                span(class='glyphicon glyphicon-ok' aria-hidden='true')
-                            else
-                                span(class='glyphicon glyphicon-remove' aria-hidden='true')
-                                                               
-                    td: button(type='button' class='btn btn-primary btn-block btn-view-results') View
-    
     div(class='table-responsive')
         table(id='player_comparison_table' class='table table-striped table-bordered')
             thead
                 tr
-                    th
-                    each player in players
-                        th= player.name
+                    th Legs
+                    each playerId in game.players
+                        th= players[playerId].name
+                    th Results
             tbody
+            - var idx = 1;
+            each match in game.matches
                 tr
-                    td(class='col-sm-2') PPD
-                    each player in players
-                        td= player.ppd.toFixed(2)
-                tr
-                    td(class='col-sm-2') First 9 PPD
-                    each player in players
-                        td= player.first_nine_ppd.toFixed(2)
-                tr
-                    td(class='col-sm-2') Checkout%
-                    each player in players
-                        td= player.checkout_percentage === 0 ? '-' : player.checkout_percentage.toFixed(2) + '%'
-                tr
-                    td(class='col-sm-2') Overall Accuracy
-                    each player in players
-                        td= player.overall_accuracy.toFixed(2)
-                //tr
-                    td(class='col-sm-2') Accuracy 20s
-                    each player in players
-                        td= player.accuracy_20s.toFixed(2)
-                //tr
-                    td(class='col-sm-2') Accuracy 19s
-                    each player in players
-                        td= player.accuracy_19s.toFixed(2)
-                tr
-                    td(class='separator_row')
-                        each player in players
-                            td(class='separator_row') High Scores
-                tr
-                    td(class='col-sm-2') 60+
-                    each player in players
-                        td= player.scores_60s
-                tr
-                    td(class='col-sm-2') 100+
-                    each player in players
-                        td= player.scores_100s
-                tr
-                    td(class='col-sm-2') 140+
-                    each player in players
-                        td= player.scores_140s
-                tr
-                    td(class='col-sm-2') 180
-                    each player in players
-                        td= player.scores_180
+                    th(hidden='true' scope='row')= match.id
+                    td(class='col-sm-2')= 'Leg #' + idx++
+                    each playerId in game.players
+                        td
+                            if match.winner_player_id === playerId
+                                span(class='glyphicon glyphicon-ok' aria-hidden='true')
+                            else
+                                span(class='glyphicon glyphicon-remove' aria-hidden='true')
+                    td: button(type='button' class='btn btn-primary btn-block btn-view-results') View
+            tr
+                th
+                each playerId in game.players
+                    th= players[playerId].name
+            tr
+                td(class='col-sm-2') PPD
+                each stat in stats
+                    td= stat.ppd.toFixed(2)
+            tr
+                td(class='col-sm-2') First 9 PPD
+                each stat in stats
+                    td= stat.first_nine_ppd.toFixed(2)
+            tr
+                td(class='col-sm-2') Checkout%
+                each stat in stats
+                    td= stat.checkout_percentage === 0 ? '-' : stat.checkout_percentage.toFixed(2) + '%'
+            tr
+                td(class='col-sm-2') Accuracy (All/20/19)
+                each stat in stats
+                    - var accuracy_20 = stat.accuracy_20 === null ? '-' : stat.accuracy_20.toFixed(2)
+                    - var accuracy_19 = stat.accuracy_19 === null ? '-' : stat.accuracy_19.toFixed(2)
+                    td= stat.accuracy_overall.toFixed(2) + ' / ' + accuracy_20 + ' / ' + accuracy_19
+            tr
+                td(class='separator_row')
+                    each stat in stats
+                        th(class='separator_row') High Scores
+            tr
+                td(class='col-sm-2') 60+
+                each stat in stats
+                    td= stat.scores_60s_plus
+            tr
+                td(class='col-sm-2') 100+
+                each stat in stats
+                    td= stat.scores_100s_plus
+            tr
+                td(class='col-sm-2') 140+
+                each stat in stats
+                    td= stat.scores_140s_plus
+            tr
+                td(class='col-sm-2') 180
+                each stat in stats
+                    td= stat.scores_180s
