--- a/views/match/spectate.pug
+++ b/views/match/spectate.pug
@@ -29,6 +29,10 @@ block scripts
                     else if (data.darts_thrown === 3) {
                         dart = $('#third');
                     }
+                    else {
+                        console.log("Incorrect number of darts thrown: " + data.darts_thrown);
+                        return;
+                    }
                     dart.text(data.dart_text);
 
                     if (data.multiplier == 3) {
@@ -47,7 +51,7 @@ block scripts
                     $('#total').text(data.score + parseInt($('#total').text()));
 
                     if (data.is_finished) {
-                        var text = playersMap['p' + data.current_player_id].name + ' won the leg';
+                        var text = playersMap[data.current_player_id].name + ' won the leg';
                         showAlert(text, function() {
                             alertify.success('Leg finished');
                         });
@@ -85,7 +89,7 @@ block scripts
 
                     // Update the visits table
                     var visit = data.visits[data.visits.length - 1];
-                    var playerName = playersMap['p' + visit.player_id].name;
+                    var playerName = playersMap[visit.player_id].name;
                     var firstDartScore = getScoreString(visit.first_dart_multiplier, visit.first_dart);
                     var firstDartCSS= getDartCSS(visit.first_dart_multiplier);
                     var secondDartScore = getScoreString(visit.second_dart_multiplier, visit.second_dart);
@@ -120,7 +124,7 @@ block scripts
                 if (!match.is_finished) {
                     var html =
                         "<tr>" +
-                            "<td id='current_player' style='height: 50px;'>" + playersMap['p' + match.current_player_id].name + "</td>" +
+                            "<td id='current_player' style='height: 50px;'>" + playersMap[match.current_player_id].name + "</td>" +
                             "<td class='dart-score-container no-border'><label id='first' text='0'></label></td>" +
                             "<td class='dart-score-container no-border'><label id='second' text='0'></label></td>" +
                             "<td class='dart-score-container no-border'><label id='third' text='0'></label></td>" +
@@ -159,9 +163,10 @@ block content
     h2 Spectate
 
     mixin get_player_cell(player)
-        td(id='player_score_' + player.id colspan='3' class=player.current ? 'label-active-player' : 'label-inactive-player' style='padding-right: 10px;')
-            label(id='player_id_' + player.id class='label label-block label-player-score')= player.current_score
-            label(id='player_name_' + player.name class='label-player-name')= player.name + player.wins_string
+        td(id='player_score_' + player.player_id colspan='3' class=player.is_current_player ? 'label-active-player' : 'label-inactive-player' style='padding-right: 10px;')
+            label(id='player_id_' + player.player_id class='label label-block label-player-score')= player.current_score
+            label(id='player_name_' + players[player.player_id].name class='label-player-name')= players[player.player_id].name
+            //- TODO Need to display number of wins per player + player.wins
 
     h3 Players
     div(class='table-responsive')
@@ -169,31 +174,26 @@ block content
             tbody
                 tr
                     td(colspan='1' class='txt-center' style='width: 10%;')
-                        label(id='round_number' class='match_information')= 'R' + match.round_number
-                        label(class='match_information')= '/' +game_type.short_name
-                    each player in players
+                        label(id='round_number' class='match_information')= 'R' + (Math.floor(match.visits.length / match.players.length) + 1)
+                        label(class='match_information')= '/' + game.game_type.short_name
+                    each player in match_players
                         +get_player_cell(player)
-                tr
-                    td(colspan='1' class='txt-center' style='width: 10%;') PPD
-                    each player in players
-                        td(id='player_ppd_' + player.id colspan='3' style='padding-right: 10px;')
-                            label(id='player_id_' + player.id + '_ppd' style='font-weight: 500')= player.ppd.toFixed(2)
     
-    mixin get_dart_label(value, multiplier)
-        if multiplier == 3
-            label(class='btn-score dart-triple')= 'T-' + value
-        else if multiplier == 2
+    mixin get_dart_label(dart)
+        if dart.multiplier == 3
+            label(class='btn-score dart-triple')= 'T-' + dart.value
+        else if dart.multiplier == 2
             if value == 25
                 label(class='btn-score dart-double') Bull
             else
-                label(class='btn-score dart-double')= 'D-' + value
+                label(class='btn-score dart-double')= 'D-' + dart.value
         else
-            if value == 0
+            if dart.value == 0
                 label(class='btn-score') Miss
-            else if value == 25
+            else if dart.value == 25
                 label(class='btn-score') Bull
             else
-                label(class='btn-score')= value
+                label(class='btn-score')= dart.value
     
     h3 Visits
     div(class='table-responsive')
@@ -206,19 +206,19 @@ block content
                     th Third
                     th Total
             tbody
-                each visit in visits
+                each visit in match.visits
                     tr
-                        td= players['p' + visit.player_id].name
+                        td= players[visit.player_id].name
                         td(class='dart-score-container no-border')
-                            +get_dart_label(visit.first_dart, visit.first_dart_multiplier)
+                            +get_dart_label(visit.first_dart)
 
                         td(class='dart-score-container no-border')
-                            +get_dart_label(visit.second_dart, visit.second_dart_multiplier)
+                            +get_dart_label(visit.second_dart)
 
                         td(class='dart-score-container no-border')
-                            +get_dart_label(visit.third_dart, visit.third_dart_multiplier)
+                            +get_dart_label(visit.third_dart)
                         td
                             if visit.is_bust
                                 label BUST
                             else
-                                label= (visit.first_dart_multiplier * visit.first_dart ) + (visit.second_dart_multiplier * visit.second_dart) + (visit.third_dart_multiplier * visit.third_dart)
+                                label= (visit.first_dart.multiplier * visit.first_dart.value ) + (visit.second_dart.multiplier * visit.second_dart.value) + (visit.third_dart.multiplier * visit.third_dart.value)
