Some minor UI fixes

--- a/views/game_result.pug
+++ b/views/game_result.pug
@@ -22,7 +22,7 @@ block content
             p= 'Winner: ' + players[playerId].name
 
     div(class='table-responsive')
-        table(id='player_comparison_table' class='table table-striped table-bordered' style='table-layout: fixed;')
+        table(id='player_comparison_table' class='table table-striped table-bordered')
             thead
                 tr
                     th Legs
