--- a/views/player_statistics.pug
+++ b/views/player_statistics.pug
@@ -68,13 +68,23 @@ block content
                     th 60+
                     th 100+
                     th 140+
-                    th 180
+                    th 180s
             tbody
                     tr
                         td: p= statistics.scores_60s_plus
                         td: p= statistics.scores_100s_plus
                         td: p= statistics.scores_140s_plus
                         td: p= statistics.scores_180s
+                    tr
+                        th Best PPD / First 9
+                        th Best 301
+                        th Best 501
+                        th Highest Checkout
+                    tr
+                        td: p= statistics.best_ppd.toFixed(2) + ' / ' + statistics.best_first_nine_ppd.toFixed(2)
+                        td: p= statistics.best_301
+                        td: p= statistics.best_501
+                        td: p= statistics.highest_checkout
         h3 Accuracy
         table(id='player_accuracy_table' class='table table-striped table-bordered')
             thead
