Moving more endpoints to the new Go backend

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,6 +19,7 @@ html
 		link(rel='stylesheet' href='/css/alertify.min.css')
 		link(rel='stylesheet' href='/css/alertify.bootstrap.min.css')
 
+		title kcapp
 		script.
 			// Set alertify defaults for Boostrap theme
 			alertify.defaults.theme.ok = "btn btn-primary";
