--- a/views/index.pug
+++ b/views/index.pug
@@ -21,7 +21,7 @@ block content
 	p.
 		Here you can start a new darts game, or view players, owes or previous matches by selecting from the menu at the top
 	p
-		button(class='btn btn-primary' type='button' data-toggle='collapse' data-target='#newMatchCollapse' aria-expanded='false' aria-controls='newMatchCollapse') Create Match &raquo;
+		button(class='btn btn-primary' type='button' data-toggle='collapse' data-target='#newMatchCollapse' aria-expanded='false' aria-controls='newMatchCollapse') Create Match »
 	div(class='collapse' id='newMatchCollapse')
 		div(class='card card-block')
 			if players.length == 0
@@ -48,14 +48,14 @@ block content
 					div(class='form-group')
 						label(for='matchTypeSelect') Game Mode
 						select(class='form-control' name='gameType' id='gameTypeSelect')
-							each gameType in gameTypes
+							each gameType in game_types
 								option(value=gameType.id)= gameType.name
 
 					div(class='form-group')
 						label(for='matchStakeSelect') Game Stake
 						select(class='form-control' name='gameStake' id='gameStakeSelect')
 							option(value=0) -
-							each gameStake in gameStakes
-								option(value=gameStake.id)= gameStake.item							
+							each oweType in owe_types
+								option(value=oweType.id)= oweType.item							
 
 					button(type='submit' name='submit' form='newMatchForm' id='startMatchButton' class='btn btn-primary') Start
